[package]
name = "tomlconf"
description = """Automatically generate, read, and manage application-specific \
TOML configuration files simply, cleanly, and consistently."""
version = "1.0.0"

authors = ["Yaulendil <davarice@protonmail.com>"]
repository = "https://github.com/yaulendil/tomlconf"
readme = "README.md"

exclude = ["/.idea"]
categories = ["config", "filesystem"]
keywords = ["serde", "toml"]

edition = "2021"
license = "Apache-2.0"


[dependencies]
directories = "4.0.1"
serde = "1.0"
toml = "0.5.8"


[features]
default = []
nightly = []
